--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "bufferhelper": "^0.2.1",
     "colors": "^1.1.2",
-    "freemarker.js": "^1.3.0",
-    "iconv-lite": "^0.4.15"
+    "iconv-lite": "^0.4.15",
+    "node-uuid": "^1.4.7"
   },
   "devDependencies": {},
   "repository": {
