--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ftl-suite",
-  "version": "1.0.5",
-  "description": "freemarker develop suite",
+  "version": "1.0.6",
+  "description": "Enjoying Freemarker Development",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,11 +10,12 @@
   "license": "MIT",
   "dependencies": {
     "bufferhelper": "^0.2.1",
+    "iconv-lite": "^0.4.15"
+  },
+  "devDependencies": {
     "colors": "^1.1.2",
-    "iconv-lite": "^0.4.15",
     "node-uuid": "^1.4.7"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/figo-fe/ftl-suite.git"
