--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ftl-suite",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "Enjoying Freemarker Development",
   "main": "index.js",
   "scripts": {
@@ -11,6 +11,7 @@
   "dependencies": {
     "bufferhelper": "^0.2.1",
     "colors": "^1.1.2",
+    "extend": "^3.0.0",
     "iconv-lite": "^0.4.15",
     "node-uuid": "^1.4.7"
   },
