--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ftl-suite",
-  "version": "1.2.3",
+  "version": "1.3.0",
   "description": "Enjoying Freemarker Development",
   "main": "index.js",
   "scripts": {
@@ -11,12 +11,11 @@
   },
   "license": "MIT",
   "dependencies": {
-    "bufferhelper": "^0.2.1",
     "colors": "^1.1.2",
     "extend": "^3.0.0",
+    "freemarker.js": "^1.4.0",
     "glob": "^7.1.1",
-    "iconv-lite": "^0.4.15",
-    "node-uuid": "^1.4.7"
+    "superagent": "^3.8.3"
   },
   "repository": {
     "type": "git",
